# HorsePower

./: .gitignore  README.md  deploy.sh  setup_env.sh
data/simple-join/: department.csv  employee.csv
data/tpch/: readme.md  run.sh
data/tpch-bin/: readme.md
docs/: readme.md
docs/aida-query/: q15.sql  q17.sql  q3.sql
docs/book/: README.md  SUMMARY.md  book.json  overview.md
exp/: build.sh
exp-dls18/: readme.md  run_all.sh  setup.sh  setup_translator.sh  test-thread.sh
libs/: deploy_linux.sh
src/HorseIR/ast/: #Literal.h#  .#Literal.h  AST.h  ASTNode.cc  ASTNode.h  ASTVisitor.cc  ASTVisitor.h  CMakeLists.txt  DictionaryType.cc  EnumerationType.cc  FunctionType.cc  ListType.cc  Literal.h  Operand.h  ScalarType.cc  Structure.h  Type.cc  Type.h  Type.plantuml  WildcardType.cc
src/HorseIR/ast/Literal/: BoolLiteral.cc  CharLiteral.cc  ComplexLiteral.cc  FunctionLiteral.cc  Integer16Literal.cc  Integer32Literal.cc  Integer64Literal.cc  Integer8Literal.cc  IntegerLiteral.cc  Literal.cc  NilLiteral.cc  SymbolLiteral.cc  TableLiteral.cc
src/HorseIR/ast/Operand/: BoolLiteral.cc  CharLiteral.cc  ComplexLiteral.cc  FunctionLiteral.cc  Identifier.cc  Integer16Literal.cc  Integer32Literal.cc  Integer64Literal.cc  Integer8Literal.cc  IntegerLiteral.cc  Literal.cc  NilLiteral.cc  Operand.cc  SymbolLiteral.cc  TableLiteral.cc
src/HorseIR/ast/Structure/: AssignStatement.cc  BranchStatement.cc  CompilationUnit.cc  LabelStatement.cc  Method.cc  Module.cc  PhiStatement.cc  ReturnStatement.cc  Statement.cc  StatementIterator.cc
src/HorseIR/ast/Type/: DictionaryType.cc  EnumerationType.cc  FunctionType.cc  ListType.cc  ScalarType.cc  Type.cc  WildcardType.cc
src/HorseIR/frontend/: .gitignore  CMakeLists.txt  Debug.cc
src/HorseIR/frontend/analysis/: CFG.h  CallGraph.cc  ControlFlowGraph.cc
src/HorseIR/frontend/ast/: AST.h  ASTNode.cc  ASTNode.h  ASTPrinter.cc  ASTPrinter.h  ASTVisitor.cc  ASTVisitor.h  CSTConverter.cc  CSTConverter.h  CompilationUnit.h  Method.h  Module.h  Operand.h  Structure.h  Type.h
src/HorseIR/frontend/ast/Operand/: BoolLiteral.cc  ComplexLiteral.cc  FunctionLiteral.cc  Identifier.cc  Integer16Literal.cc  Integer32Literal.cc  Integer8Literal.cc  IntegerLiteral.cc  Literal.cc  NilLiteral.cc  Operand.cc  TableLiteral.cc
src/HorseIR/frontend/ast/Structure/: AssignStatement.cc  BranchStatement.cc  CompilationUnit.cc  Method.cc  Module.cc  PhiStatement.cc  ReturnStatement.cc  Statement.cc  StatementIterator.cc
src/HorseIR/frontend/ast/Type/: DictionaryType.cc  DictionaryType.h  EnumerationType.cc  EnumerationType.h  FunctionType.cc  FunctionType.h  ListType.cc  ListType.h  Primitive.h  PrimitiveType.h  ScalarType.cc  Type.cc  Type.h  WildcardType.cc  WildcardType.h
src/HorseIR/frontend/ast/operand/: BoolLiteral.h  CharLiteral.h  ComplexLiteral.h  DateLiteral.h  DateTimeLiteral.h  DictionaryLiteral.h  EnumerationLiteral.h  FP32Literal.h  FP64Literal.h  FunctionLiteral.h  Identifier.h  Integer16Literal.h  Integer32Literal.h  Integer64Literal.h  Integer8Literal.h  KeyTableLiteral.h  ListLiteral.h  Literal.h  MinuteLiteral.h  MonthLiteral.h  Operand.h  SecondLiteral.h  StringLiteral.h  SymbolLiteral.h  TableLiteral.h  TimeLiteral.h  VectorLiteral.h
src/HorseIR/frontend/ast/statement/: AssignStatement.h  BranchStatement.h  InvokeStatement.h  LabelStatement.h  PhiStatement.h  ReturnStatement.h  Statement.h
src/HorseIR/frontend/ast/type/: DictionaryType.h  EnumerationType.h  FunctionType.h  ListType.h  PrimitiveType.h  Type.h  TypeUtils.cc  TypeUtils.h  WildcardType.h
src/HorseIR/frontend/cmake/: BuildHorseIRGrammar.cmake  ExternalAntlr4Cpp.cmake  FindANTLR4CPP.cmake  FindPCRE2.cmake  FindSpdLog.cmake  FindYAMLCPP.cmake  GenerateAntlr4Grammar.cmake
src/HorseIR/frontend/grammar/: HorseIR.ebnf  HorseIR.g4  HorseIR.txt
src/HorseIR/frontend/grammar/syntax diagrams/: ebnf--ComplexLiteral.eps  ebnf--DateTimeLiteral.eps  ebnf--DateTimeValue.eps  ebnf--DateValue.eps  ebnf--Digits.eps  ebnf--FunctionName.eps  ebnf--Hexadecimal.eps  ebnf--Identifier.eps  ebnf--Invocation.eps  ebnf--KTableLiteral.eps  ebnf--ListLiteral.eps  ebnf--Literal.eps  ebnf--MinuteLiteral.eps  ebnf--ModuleContent.eps  ebnf--Octal.eps  ebnf--SecondLiteral.eps  ebnf--SecondValue.eps  ebnf--SymbolLiteral.eps  ebnf--TableColumn.eps  ebnf--TableKeyedColumn.eps  ebnf--TableLiteral.eps  ebnf--Type.eps  ebnf--TypeDictionary.eps  ebnf--TypeFunction.eps  ebnf--TypeList.eps
src/HorseIR/frontend/interpreter/: #ASTLiteralConverter.h#  .#ASTLiteralConverter.h  ASTLiteralConverter.h  BackendLiteralConverter.h  BackendTraits.h  BackendTraits.h.h  Dispatcher.cc  Dispatcher.h  Exception.h  ExternalMethod.h  InternalMethod.h  Interpreter.cc  Interpreter.h  LiteralConverter.cc  LiteralConverter.h  Main.cc  MethodMETA.h  StatementFlow.cc  StatementFlow.h  VectorDispatcher.h  VectorVarStorage.h
src/HorseIR/frontend/misc/: Collections.h  Hasher.h  InfixOStreamIterator.h  Suppiler.h
src/HorseIR/frontend/tests/tpch/: database.yml  tpch-q1.hir  tpch-q14.hir  tpch-q16.hir  tpch-q18.hir  tpch-q19.hir  tpch-q22.hir
src/horseir/v3/: .gitignore  CMakeLists.txt  Makefile  compiler-llvm.c  global.cc  global.h  main.cc  make.sh  readme.md  run.sh
src/horseir/v3/analysis/: common.cc  common.h  symtable.cc  typerule.cc  typerule.h  typeshape.cc  typeshape.h  udchain.cc
src/horseir/v3/backend/: common.cc  common.h  h_hash.h  h_hash_common.h  h_hash_v0.cc  h_hash_v1.cc  h_hash_v2.cc  h_hash_v3.cc  h_io.cc  h_io.h  h_libs.cc  h_libs.h  h_memory.cc  h_memory.h  h_primitive.cc  h_primitive.h  h_symbol.cc  h_symbol.h  h_system.cc  h_system.h  load_db.cc  load_db.h
src/horseir/v3/frontend/: h.l  h.y  pretty.cc  pretty.h  tree.cc  tree.h  weed.cc
src/horseir/v3/optimizer/: autofusion.cc  common.cc  common.h  elementwise.cc  inlining.cc  pattern.cc  simplify.cc  slicing.cc
src/horseir/v3/translator/: common.cc  common.h  compiler.cc  interpreter.cc  jit.cc  jit.h  llvmjit.h  optimizer.cc
src/horseir/v3/util/: common.h  dot.cc  info.cc  json.cc  options.cc  simplehash.cc  stats.cc
tests/: readme.md
(+1236 files in other folders)
